# audience-development

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  cloud_run.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: daily-digest.yml
.metaswarm/: knowledge-base.md  project-profile.json
config/: pipeline.json  signal_profile.json  watchlist.json
docs/plans/: 2026-04-03-phase1-pipeline-design.md
planning/: audience-development-system-scope.md  content-pipeline-project-brief.md  corpus-topic-extraction.md  day0-validation-findings.md  email-delivery-feature-spec.md  neighborhood-mapper-project-brief.md  substack-growth-system.jsx
scripts/: day0_validation.py  review_candidates.py  run_pipeline.py
src/: deliver.py  digest.py  discover.py  enrich.py  feedback.py  fetch.py  models.py  score.py  subscriptions.py  utils.py
